Init todos endpoints
