# src/db/entity/Todo.ts
@@ -1,10 +1,4 @@
-import {
-  Column,
-  Entity,
-  Generated,
-  ManyToOne,
-  PrimaryGeneratedColumn,
-} from "typeorm";
+import { Column, Entity, ManyToOne, PrimaryGeneratedColumn } from "typeorm";
 import { User } from "./User";
 
 @Entity({ name: "todos" })
@@ -12,20 +6,20 @@ export class Todo {
   @PrimaryGeneratedColumn()
   id: number;
 
-  @Generated("uuid")
+  @Column({ type: "uuid" })
   uuid: string;
 
   @Column()
   description: string;
 
   @Column()
-  isDone: boolean;
+  is_done: boolean;
+
+  @Column({ type: "timestamp" })
+  created_at: Date;
 
   @Column({ nullable: true, type: "timestamp" })
-  created: Date;
-
-  @Column({ nullable: true, type: "timestamp" })
-  updated: Date;
+  updated_at: Date;
 
   @ManyToOne(() => User, (user) => user.todos)
   user: User;
