# src/routes/users.ts
@@ -1,4 +1,5 @@
 import { Router } from "express";
+import { createTodo, getTodo, getTodos } from "../controllers/todos";
 import {
   getUsers,
   createUser,
@@ -13,6 +14,10 @@ export default (() => {
   router.post("/", createUser);
   router.get("/:id", getUser);
   router.delete("/:id", deleteUser);
+
+  router.post("/:id/todos", createTodo);
+  router.get("/:id/todos", getTodos);
+  router.get("/:id/todos/:uuid", getTodo);
 
   return router;
 })();
